<resources>
    <string name="str_app_name">Haco</string>
    <string name="str_login">Login</string>
    <string name="str_register">Register</string>
    <string name="str_profile">Profile</string>
    <string name="str_report">Report</string>
    <string name="str_settings">Settings</string>
    <string name="str_username">Username</string>
    <string name="str_email">Email</string>
    <string name="str_password1">Password</string>
    <string name="str_password2">Re-Enter Password</string>
    <string name="str_contentDescriptionLogo">Haco Logo with Transition</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>